--- a/Hello_World/Hello_World/Hello_World.csproj
+++ b/Hello_World/Hello_World/Hello_World.csproj
@@ -5,4 +5,7 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NUnit" Version="3.9.0" />
+  </ItemGroup>
 </Project>
