--- a/Assignment10/Assignment10Tests/Assignment10Tests.csproj
+++ b/Assignment10/Assignment10Tests/Assignment10Tests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="AddOperatorTests.cs" />
     <Compile Include="MultiplyOperatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SquareOperatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
