--- a/Assignment10/Assignment10Tests/Assignment10Tests.csproj
+++ b/Assignment10/Assignment10Tests/Assignment10Tests.csproj
@@ -57,6 +57,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="AddOperatorTests.cs" />
+    <Compile Include="ExpressionTests.cs" />
     <Compile Include="MultiplyOperatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SquareOperatorTests.cs" />
