--- a/Assignment10/Assignment10Tests/Assignment10Tests.csproj
+++ b/Assignment10/Assignment10Tests/Assignment10Tests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="MultiplyOperatorTests.cs" />
     <Compile Include="NegateOperatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqrtOperatorTests.cs" />
     <Compile Include="SquareOperatorTests.cs" />
     <Compile Include="SubtractOperatorTests.cs" />
   </ItemGroup>
