--- a/FinalProject/CodedUITestProject1/CodedUITestProject1.csproj
+++ b/FinalProject/CodedUITestProject1/CodedUITestProject1.csproj
@@ -59,7 +59,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CodedUITest1.cs" />
+    <Compile Include="CodedUITest2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UIMap.cs">
       <DependentUpon>UIMap.uitest</DependentUpon>
@@ -67,6 +67,7 @@
     <Compile Include="UIMap.Designer.cs">
       <DependentUpon>UIMap.uitest</DependentUpon>
     </Compile>
+    <Compile Include="UIMapListBoxUtility.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
