--- a/FinalProject/FinalProject/UI.csproj
+++ b/FinalProject/FinalProject/UI.csproj
@@ -120,7 +120,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Business\Business.csproj">
